<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">R PDF Editor Offline</string>
    <string name="title">PDF Actions</string>
    <string name="testTitle" tools:ignore="MissingTranslation"><font color="#303F9F">The Title</font></string>
    <string name="images_to_pdf1" translatable="false"><font color="#ffffff">Images to Pdf</font></string>
    <string name="file_name_text">File Name</string>
    <string name="select_images_text">Select Images</string>
    <string name="password_protect_pdf_text">Password Protect PDF</string>
    <string name="edit_images_text">Edit Images</string>
    <string name="open_pdf_text">Open This PDF</string>
    <string name="create_pdf_text">Create PDF</string>
    <string name="details"><b>Details</b></string>
    <string name="search_hint">Name of File</string>
    <string name="search">Search</string>
    <string name="default_content_description">No Description</string>
    <string name="prompt_input">Enter Here</string>
    <string name="Admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstial_ad" translatable="false">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string-array name="array_page_sizes_b0_b10" translatable="false">
        <item>B0 (1000 x 1414 mm)</item>
        <item>B1 (707 x 1000 mm)</item>
        <item>B2 (500 x 707 mm)</item>
        <item>B3 (353 x 500 mm)</item>
        <item>B4 (250 x 353 mm)</item>
        <item>B5 (176 x 250 mm)</item>
        <item>B6 (125 x 176 mm)</item>
        <item>B7 (88 x 125 mm)</item>
        <item>B8 (62 x 88 mm)</item>
        <item>B9 (44 x 62 mm)</item>
        <item>B10 (31 x 44 mm)</item>
    </string-array>
    <string-array name="array_page_sizes_a0_b10" translatable="false">
        <item>A0 (841 x 1189 mm)</item>
        <item>A1 (594 x 841 mm)</item>
        <item>A2 (420 x 594 mm)</item>
        <item>A3 (297 x 420 mm)</item>
        <item>A4 (210 x 297 mm)</item>
        <item>A5 (148 x 210 mm)</item>
        <item>A6 (105 x 148 mm)</item>
        <item>A7 (74 x 105 mm)</item>
        <item>A8 (52 x 74 mm)</item>
        <item>A9 (37 x 52 mm)</item>
        <item>A10 (26 x 37 mm)</item>
    </string-array>
    <string-array name="fontStyles" translatable="false">
        <item>NORMAL</item>
        <item>BOLD</item>
        <item>ITALIC</item>
        <item>UNDERLINE</item>
        <item>STRIKETHRU</item>
        <item>BOLDITALIC</item>
    </string-array>
    <string name="pdf_ext" translatable="false">.pdf</string>
    <string name="pdf_type" translatable="false">application/pdf</string>
    <string name="txt_type" translatable="false">text/*</string>
    <string name="please_wait">Please Wait</string>
    <string name="bundleKey">ImageUri</string>
    <string name="whatsappToast">Sorry! Images Could Not Be Added. Please Select the Images from Our **select Images** Option.</string>
    <string name="successToast">Images Successfully Added.</string>
    <string name="create_pdf">Create PDF</string>
    <string name="qr_barcode_pdf"> <font color="#7263E2">QR &amp; Barcodes</font></string>
    <string name="qr_barcode_pdf1" translatable="false" tools:ignore="DuplicateDefinition"> <font color="#ffffff">QR &amp; Barcodes</font></string>
    <string name="viewFiles"><font color="#7263E2">View Files</font></string>
    <string name="viewFiles1" translatable="false" tools:ignore="DuplicateDefinition"><font color="#ffffff">View Files</font></string>
    <string name="extras"><u>Extras</u></string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="faqs" translatable="false">FAQ</string>
    <string name="images_to_pdf">Images to PDF</string>
    <string name="page_color">Page Color</string>
    <string name="filter_images_Text">Filter Images \n</string>
    <string name="preview_image_to_pdf">Preview PDF</string>
    <string name="choose_page_number_style">Choose Page Number Style</string>
    <string name="show_pg_num">Show Page Numbers</string>
    <string name="page_x_of_n">Page X of N</string>
    <string name="page_x">X of N</string>
    <string name="x">X</string>
    <string name="arrow_up">Arrow Up</string>
    <string name="arrow_down">Arrow Down</string>
    <string name="rearrange_images">Rearrange Images</string>
    <string name="rearrange_text">Rearrange</string>
    <string name="images_rearranged">Images Rearranged</string>
    <string name="snackbar_undoAction"><font color="#ffffff">Undo</font></string>
    <string name="pdf_does_not_exist_message">The Pdf Doesn\'t Exist.</string>
    <string name="image_rearranging_options">Image Rearranging Options</string>
    <string name="filter_file_name">%s_%s.jpg</string>
    <string name="compress_image">Image Compression : %s %%</string>
    <string name="quality_image">Enter % Compression of Image :</string>
    <string name="invalid_entry">Invalid Entry</string>
    <string name="compress_dialog_enter_prompt">Enter Here</string>
    <string name="compress_dialog_percentage">%</string>
    <string name="set_as_default">Set as Default</string>
    <string name="add_margins">Add Margins</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="border">Add Image Border</string>
    <string name="border_dialog_title">Border Width : %d</string>
    <string name="border_width_prompt">Enter Border Width Units</string>
    <string name="image_scale_type">Set Image Scale Type</string>
    <string name="stretch_image">Stretch Image to Fit on Page</string>
    <string name="maintain_aspect_ratio">Please Maintain Aspect Ratio of Images</string>
    <string name="scan_qrcode">Scan QR Code</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="qrbarcodes_to_pdf">Create PDF from QR &amp; Barcode</string>
    <string name="scan_cancelled">Cancelled Scan by User</string>
    <string name="snackbar_no_images">No Images Selected</string>
    <string name="snackbar_no_pdfs_selected">No PDFs Selected</string>
    <string name="snackbar_name_not_blank">Name Cannot Be Blank</string>
    <string name="snackbar_permissions_given">Permissions Given!</string>
    <string name="snackbar_insufficient_permissions">Insufficient Permissions!</string>
    <string name="no_permissions">Please Provide Storage Permissions to View Your Files.</string>
    <string name="prompt_give_permission">Provide Permissions</string>
    <string name="snackbar_images_added">Images Added</string>
    <string name="snackbar_file_renamed">File Renamed.</string>
    <string name="snackbar_file_not_renamed">File Can\'t Be Renamed.</string>
    <string name="snackbar_file_not_deleted">File Can\'t Be Deleted.</string>
    <string name="snackbar_folder_not_created">Error on Creating Application Folder.</string>
    <string name="pdf_merged">PDFs Merged</string>
    <string name="error_path_not_found">Sorry, We Are Unable to Access the File at This Location</string>
    <string name="creating_pdf">Creating PDF</string>
    <string name="creating_txt">Creating Text File</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="example">Example : abc</string>
    <string name="snackbar_no_pdf_app">No App to Read PDF File</string>
    <string name="open_file">Open File</string>
    <string name="set_password">Set Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="snackbar_password_cannot_be_blank">Password Cannot Be Blank</string>
    <string name="cannot_add_password">Password Could Not Be Applied to The PDF. Please Check The PDF Again.</string>
    <string name="snackbar_imagecropped">Images Cropped</string>
    <string name="cropImage_activityTitle">Crop Image</string>
    <string name="snackbar_pdfCreated">PDF Created!</string>
    <string name="error_uri_not_found">Sorry, We Are Unable to Access the Cropped Image. Please Try Again</string>
    <string name="snack_bar_empty_txt_in_pdf">The Chosen Pdf Has No Text to Extract!</string>
    <string name="snackbar_txtExtracted">Text Extracted!</string>
    <string name="snackbar_pdfselected">PDF File Selected!</string>
    <string name="snackbar_viewAction">View</string>
    <string name="more_options_text">Additional Options</string>
    <string name="snackbar_no_duplicate_pdf">Duplicate Pages Not Found. No New Pdf Created.</string>
    <string name="snackbar_duplicate_removed">A New Pdf Is Created After Removal of Duplicate Pages.</string>
    <string name="snackbar_invert_unsuccessful">The Pdf Could Not Be Inverted</string>
    <string name="snackbar_invert_successfull">Inverted</string>
    <string name="snackbar_color_too_close">Your Font Color and Background Color Are Too Similar</string>
    <string name="excel_selected">Excel File Selected</string>
    <string name="excel_to_pdf"> <font color="#7263E2">Create Excel to PDF</font></string>
    <string name="excel_to_pdf1" translatable="false" tools:ignore="DuplicateDefinition"> <font color="#ffffff">Excel to PDF</font></string>
    <string name="excel_tv_view_text">Excel File selected: </string>
    <string name="select_excel_file">Select Excel File</string>
    <string name="share_chooser">Select App to Send Message…</string>
    <string name="rate_us_text" translatable="false">Hey It’s Very Useful to Me If You’d Check out R Pdf Editor Offline Hopefully You Will Definitely like This Pdf Offline,  Thanks! \n\ndownload Now: \nhttps://Bit.Ly/3irp5rj</string>
    <string name="snackbar_no_share_app">No Application to Share.</string>
    <string name="images_selected"> %1$d Image(s) Selected.</string>
    <string name="no_pdf">No PDFs to Show</string>
    <string name="get_started">Get Started Now</string>
    <string name="view_files_text">View All Your Converted Files Here!</string>
    <string name="empty_image_description">No Pdfs</string>
    <string name="enter_password_custom">Enter Password</string>
    <string name="example_pass_123">pass@123</string>
    <string name="remove_dialog">REMOVE</string>
    <string name="password_remove">Password Removed</string>
    <string name="merge_pdf"> <font color="#7263E2">Merge PDF</font></string>
    <string name="merge_pdf1" translatable="false" tools:ignore="DuplicateDefinition"> <font color="#ffffff">Merge PDF</font></string>
    <string name="merge_file_select">Select a File</string>
    <string name="File_hint_two" tools:keep="@string/File_hint_two">File Path for Pdf Two</string>
    <string name="b0_to_b10">B0 to B10</string>
    <string name="a0_to_a10">A0 to A10</string>
    <string name="tabloid">TABLOID</string>
    <string name="executive">EXECUTIVE</string>
    <string name="ledger">LEDGER</string>
    <string name="letter">LETTER</string>
    <string name="legal">LEGAL</string>
    <string name="extract_text"><font color="#7263E2">Extract Text</font></string>
    <string name="compress_pdf_prompt">Enter % Compression of PDF : </string>
    <string name="compress_info">Congratulations! Your PDF is Compressed: \n Original PDF Size : %s \n Compressed PDF Size: %s</string>
    <string name="select_pdf_file">Select PDF File</string>
    <string name="invert_pdf_info">All the Colors in the Pdf Will Be Inverted</string>
    <string name="invert_pdf_title">Invert PDF</string>
    <string name="enter_rotation_angle">Enter Rotation Angle</string>
    <string name="degree_90" translatable="false">90 &#xb0;</string>
    <string name="degree_180" translatable="false">180 &#xb0;</string>
    <string name="degree_270" translatable="false">270 &#xb0;</string>
    <string name="theme_white">White</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black</string>
    <string name="view_pdf">View PDF</string>
</resources>