<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Bgcolor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_rotation_angle"
        android:fontFamily="@font/sarabunregular"
        android:textSize="18sp"
        android:textColor="@color/colorAccent1"/>

    <RadioGroup
        android:id="@+id/rotation_angle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/deg90"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarabunregular"
            android:text="@string/degree_90"
            android:textColor="@color/colorAccent1"
            android:buttonTint="@color/colorAccent1"/>

        <RadioButton
            android:id="@+id/deg180"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarabunregular"
            android:text="@string/degree_180"
            android:textColor="@color/colorAccent1"
            android:buttonTint="@color/colorAccent1"/>

        <RadioButton
            android:id="@+id/deg270"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarabunregular"
            android:text="@string/degree_270"
            android:textColor="@color/colorAccent1"
            android:buttonTint="@color/colorAccent1"/>
    </RadioGroup>

</LinearLayout>
