<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bgcolor">

    <RadioGroup
        android:id="@+id/radio_group_themes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_black"
            android:textColor="@color/colorAccent1"
            android:buttonTint="@color/colorAccent1"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark"
            android:textColor="@color/colorAccent1"
            android:buttonTint="@color/colorAccent1"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_white"
            android:textColor="@color/colorAccent1"
            android:buttonTint="@color/colorAccent1"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>