<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bgcolor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="*"
        tools:context=".fragment.AddImagesFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            android:elevation="10dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp">
            <com.dd.morphingbutton.MorphingButton
                android:id="@+id/selectFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="30dp"
                android:fontFamily="@font/sarabunregular"
                style="@style/MorphingButton"
                android:text="@string/merge_file_select"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorAccent1"
                android:backgroundTint="@color/colorPrimary"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/sarabunregular"
            android:text="@string/compress_pdf_prompt"
            android:textColor="@color/colorAccent1"/>

        <EditText
            android:labelFor="@id/infoText"
            android:id="@+id/pages"
            android:hint="@string/prompt_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/sarabunregular"
            android:inputType="number"
            android:autofillHints=""
            android:textColorHint="#bdbdbdbd"
            android:textColor="@color/colorAccent1"/>

        <TextView
            android:id="@+id/compressionInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            android:visibility="gone"
            android:text="@string/compress_info" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            android:elevation="10dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="4dp">
            <com.dd.morphingbutton.MorphingButton
                android:id="@+id/pdfCreate"
                style="@style/MorphingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_pdf"
                android:fontFamily="@font/sarabunregular"
                app:layout_constraintBottom_toTopOf="@id/recyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorAccent1"
                android:visibility="gone"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            android:elevation="10dp"

            app:cardCornerRadius="20dp"
            android:layout_margin="4dp">

            <Button
                android:id="@+id/view_pdf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_pdf"
                android:fontFamily="@font/sarabunregular"
                android:layout_marginHorizontal="24dp"
                android:visibility="gone"
                android:textColor="@color/colorAccent1"
                android:background="#00FFFFFF"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <include layout="@layout/bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
