<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bgcolor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="*"
        android:gravity="center_horizontal"
        tools:context=".fragment.AddImagesFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/invert_pdf_info"
            android:textSize="15sp"
            android:fontFamily="@font/sarabunbold"
            android:textStyle="bold"
            android:textColor="@color/colorAccent1"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            android:elevation="10dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="4dp">
        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/selectFile"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="30dp"
            android:padding="3dip"
            android:text="@string/merge_file_select"
            android:fontFamily="@font/sarabunregular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorAccent1"
            android:backgroundTint="@color/colorPrimary"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            android:elevation="10dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="4dp">
        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/invert"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invert_pdf_title"
            android:fontFamily="@font/sarabunregular"
            app:layout_constraintBottom_toTopOf="@id/recyclerView"
            app:layout_constraintTop_toBottomOf="@id/textView"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorAccent1"/>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/view_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/mb_green"
            android:fontFamily="@font/sarabunregular"
            android:text="@string/view_pdf"
            android:visibility="invisible" />

    </LinearLayout>

    <include layout="@layout/bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
