<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ExtractTextFragment"
    android:background="@color/Bgcolor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_text_file1"
            app:cardBackgroundColor="@color/colorPrimary"
            android:elevation="10dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="4dp">
        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/select_pdf_file"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="@font/sarabunregular"
            android:text="@string/select_pdf_file"
            android:textColor="@color/colorAccent1"
            android:backgroundTint="@color/colorPrimary"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_text_file1"
            app:cardBackgroundColor="@color/colorPrimary"
            android:elevation="10dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="4dp">
        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/extract_text"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:fontFamily="@font/sarabunregular"
            android:text="@string/extract_text"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorAccent1"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_extract_text_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:fontFamily="@font/sarabunregular"
        android:layout_marginBottom="40dp"
        android:text="@string/excel_tv_view_text"
        android:visibility="gone"/>

    <include layout="@layout/bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>